# appsaude

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_strava_integration.py  0003_activity_source_links.py  0004_whoop_external_records.py  0005_ai_assistant_meals_shoes.py  0006_ai_responses_runtime.py  0007_running_shoe_photo.py
app/: config.py  db.py  logging_config.py  main.py  models.py  routes.py  security.py  seed.py
app/services/: ai_analysis.py  ai_chat.py  ai_context.py  ai_conversation_summary.py  ai_costs.py  ai_prompt.py  ai_tool_executor.py  ai_tool_registry.py  ai_tools.py  dashboard_api.py  importers.py  openai_client.py  reconcile_new.py  reconciliation.py  reports.py  shoe_photos.py  strava.py  streams.py  sync.py  sync_locks.py  sync_scheduler.py  timezone.py  whoop.py  whoop_sync.py
app/templates/: _icons.html  activities.html  activity_detail.html  ai_analysis.html  ai_memory.html  assistant.html  base.html  checkin.html  dashboard.html  imports.html  integrations.html  login.html  not_found.html  privacy.html  recovery.html  settings.html  shoes.html  sleep.html  (+1 more)
docs/: apis.md
scripts/: adopt_existing_database.py
tests/: conftest.py  test_ai_assistant_foundation.py  test_ai_responses_stage2.py  test_dashboard_api.py  test_database_adoption.py  test_duplicates.py  test_fit_real.py  test_importers.py  test_strava_oauth_callback.py  test_strava_sync.py  test_timezones.py  test_training_rules.py  test_whoop_integration.py
(+2 files in other folders)
