[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "humberto-performance"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.13",
  "cryptography>=42",
  "fastapi>=0.115",
  "fitparse>=1.2",
  "jinja2>=3.1",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "tzdata>=2026.1",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
